# CurvesHierarchy

./: CMakeLists.txt  README.md
.cache/clangd/index/: circles.cpp.C2E5BF5ABA934519.idx  circles.h.0CF102900D150D5D.idx  coordinates.cpp.3F6460754C683D2C.idx  coordinates.h.A5C59D0AB7475C99.idx  curves.h.786181DFBB700044.idx  ellipses.cpp.37C14A9251F4E051.idx  ellipses.h.60A5CDC15427CF72.idx  helixes.cpp.839D711020A0F39E.idx  helixes.h.E5822B3833BDEC65.idx  main.cpp.42827D2C2B4BC877.idx
src/: main.cpp
src/lib/: CMakeLists.txt  circles.cpp  coordinates.cpp  ellipses.cpp  helixes.cpp
src/lib/headers/: circles.h  coordinates.h  curves.h  ellipses.h  helixes.h
